test/oscar/compiler/errors/mutNotInActor.oscar
def main() => unit = {
  mut int x = 1; 
}